--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="overflow-hidden overflow-y-auto">
     <div class="h-screen w-screen overflow-hidden hero">
-        <div class="h-[12%] bg-white fixed top-0 w-[40%] left-[30%] nav z-[11] flex justify-center items-center gap-5 boxShadow">
+        <div class="count-down h-[12%] bg-white fixed top-0 w-[40%] left-[30%] nav z-[11] flex justify-center items-center gap-5 boxShadow">
             <div>
                 <span class="count text-purple-700" id="days">00</span>
                 <span class="text">Days</span>
@@ -49,10 +49,10 @@
 
     <div class="h-screen w-screen bg-purple-400 overlay">
         <div class="h-full w-full flex justify-center items-center">
-            <div class="h-[70%] w-full flex justify-between items-center">
+            <div class="flex-holder h-[70%] w-full flex justify-between items-center">
                 <div class="info w-[60%] relative z-[10] h-full p-10 flex justify-center">
-                    <div class="w-[80%] h-full p-16">
-                        <h1 class="heading font-bold text-4xl text-white">Serene Muse</h1>
+                    <div class="flex-hold w-[80%] h-full p-16">
+                        <h1 class="head-1 heading font-bold text-4xl text-white">Serene Muse</h1>
                         <p class="text-purple-400 indent-10 text-2xl">
                             The Hub of all Adventist Songs, Serene Muse has a coverage of Adventist music from Choreal, Choir, Soloist,
                             Quartet, Acapella and more. Serene Muse offers a Serene collection of music for mental calmness, emotional
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider-img w-[20%] mr-[10%] p-3 h-full relative z-[10]">
+                <div class="hid-sm slider-img w-[20%] mr-[10%] p-3 h-full relative z-[10]">
                     <div class="slide img-contain h-full w-full">
                         <img src="./Assets/images/muse1 (4).jpg" alt="Demo Serene Muse">
                     </div>
@@ -76,7 +76,7 @@
 
     <div class="h-screen w-screen bg-purple-400 advent-s overlay pt-[10%]">
         <div class="title flex justify-center items-center h-screen w-screen absolute flex-col top-0">
-            <h2 class="relative z-[10]">Advent Spreaders</h2>
+            <h2 class="head-1 relative z-[10] heading">Advent Spreaders</h2>
             <p class="mt-2 text-purple-400 font-semibold relative z-[10]">All your favorite from the Advent Spreaders</p>
             <div class="mt-16 relative z-[10]">
                 <button data-action-type="follow-as" class="call-to-action call-to-action-btn1">Fellow the Advent Spreaders On Social media</button>
@@ -85,10 +85,10 @@
     </div>
 
     <div class="h-screen w-screen bg-purple-400 bg-1 overlay pt-[10%]">
-        <div class="h-full w-full flex justify-center items-center">
-            <div class="h-[70%] w-full flex justify-between items-center">
-                <div class="info w-[60%] relative z-[10] h-full p-10 flex justify-center">
-                    <div class="w-[80%] h-full p-16">
+        <div class=" h-full w-full flex justify-center items-center">
+            <div class="flex-holder h-[70%] w-full flex justify-between items-center">
+                <div class=" info w-[60%] relative z-[10] h-full p-10 flex justify-center">
+                    <div class="flex-hold w-[80%] h-full p-16">
                         <h1 class="heading font-bold text-4xl text-white">Be Part Of Serene Muse</h1>
                         <p class="text-purple-400 indent-10 text-2xl mt-3">
                             <strong class="text-white">DO YOU WANT TO BE PART OF SERENE MUSIC?</strong> are you a director or a Soloist or apart of a singing group!
@@ -107,9 +107,9 @@
 
     <div class="h-screen w-screen bg-purple-400 worship-1 overlay pt-[10%]">
         <div class="h-full w-full flex justify-center items-center">
-            <div class="h-[70%] w-full flex justify-between items-center">
+            <div class="flex-holder h-[70%] w-full flex justify-between items-center">
                 <div class="info w-[60%] relative z-[10] h-full p-10 flex justify-center">
-                    <div class="w-[80%] h-full p-16">
+                    <div class="flex-hold w-[80%] h-full p-16">
                         <h1 class="heading font-bold text-4xl text-white">Serene Worship</h1>
                         <p class="text-purple-400 indent-10 text-2xl">
                             For all your Best Worship Songs From Various Adventist Singing Groups, Choirs and Soloists.
@@ -128,9 +128,9 @@
     </div>
     <div class="h-screen w-screen bg-purple-400 gift-1 overlay pt-[10%]">
         <div class="h-full w-full flex justify-center items-center">
-            <div class="h-[70%] w-full flex justify-between items-center">
+            <div class="flex-holder h-[70%] w-full flex justify-between items-center">
                 <div class="info w-[70%] relative z-[10] h-full p-10 flex justify-center">
-                    <div class="w-[80%] h-full p-16">
+                    <div class="flex-hold w-[80%] h-full p-16">
                         <h1 class="heading font-bold text-4xl text-white">Incentives For Early Sign Up</h1>
                         <p class="text-purple-400 indent-10 text-3xl font-bold">
                             As they Say the Early Birds get all the best warms. in the same vine as Serene Muse we are giving out 
@@ -158,21 +158,22 @@
             </div>
            <div class="w-[43%] pl-2 pr-2 pt-5 pb-5">
                 <h1 class="text-purple-400 text-center capitalize text-2xl font-semibold">Sign up for waiting list</h1>
-                <form class="mt-10">
+                <form class="form-to-send" id="sign-up-form" class="mt-10" method="post">
                     <div class="input-group">
-                        <input type="text" class="p-2" placeholder="First Name">
+                        <input type="text" class="p-2" placeholder="First Name" name="first_name">
                     </div>
                     <div class="input-group">
-                        <input type="text" class="p-2" placeholder="Last Name">
+                        <input type="text" class="p-2" placeholder="Last Name" name="last_name">
                     </div>
                     <div class="input-group">
-                        <input type="text" class="p-2" placeholder="Middle Name (Optional)">
+                        <input type="text" class="p-2" placeholder="Middle Name (Optional)" name="middle_name">
                     </div>
                     <div class="input-group">
-                        <input type="text" class="p-2" placeholder="Email Address">
+                        <input type="text" class="p-2" placeholder="Email Address" name="email">
                     </div>
+                    <input type="hidden" value="Signing up as a user of Serene Muse.">
                     <div class="input-group mt-10">
-                        <input type="submit" class="p-2 cursor-pointer bg-default text-white" value="Sign Up">
+                        <input type="submit" data-form-type="sign-up" class="p-2 cursor-pointer bg-default text-white" value="Sign Up">
                     </div>
                 </form>
            </div>
