--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serene Muse | Coming Soon</title>
+    
+    <script src="./Assets/scripts/tailwindcss.3.3.3.js"></script>
+    <script src="./Assets/scripts/tailwindconfig.js"></script>
+
     <link rel="stylesheet" href="./Assets/styles/main.css">
+    <link rel="shortcut icon" href="./Assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body class="overflow-hidden overflow-y-auto">
     <div class="h-screen w-screen overflow-hidden hero">
