--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         
         <span data-close-action-type="sign-up" class="close-action text text-3xl text-white absolute top-10 right-10 cursor-pointer">X</span>
         <div class="w-3/6 min-h-[90px] bg-white rounded-md flex gap-2 overflow-hidden">
-            <div class="w-[57%] overlay">
+            <div class="w-[57%] overlay hid-sm">
                 <img src="./Assets/images/login2.jpg" class="object-cover" alt="Serene Muse">
             </div>
            <div class="w-[43%] pl-2 pr-2 pt-5 pb-5">
