--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
     <div id="sign-up" class="popup fixed top-0 left-0 right-0 bottom-0 bg-black/80 z-[100] flex justify-center items-center">
         
         <span data-close-action-type="sign-up" class="close-action text text-3xl text-white absolute top-10 right-10 cursor-pointer">X</span>
-        <div class="w-3/6 min-h-[90px] bg-white rounded-md flex gap-2 overflow-hidden">
+        <div class="sm-full w-3/6 min-h-[90px] bg-white rounded-md flex gap-2 overflow-hidden">
             <div class="w-[57%] overlay hid-sm">
                 <img src="./Assets/images/login2.jpg" class="object-cover" alt="Serene Muse">
             </div>
-           <div class="w-[43%] pl-2 pr-2 pt-5 pb-5">
+           <div class="sm-full main-full w-[43%] pl-2 pr-2 pt-5 pb-5">
                 <h1 class="text-purple-400 text-center capitalize text-2xl font-semibold">Sign up for waiting list</h1>
                 <form class="form-to-send" id="sign-up-form" class="mt-10" method="post">
                     <div class="input-group">
