--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
            <div class="sm-full main-full w-[43%] pl-2 pr-2 pt-5 pb-5">
                 <h1 class="text-purple-400 text-center capitalize text-2xl font-semibold">Sign up for waiting list</h1>
-                <form class="form-to-send" id="sign-up-form" class="mt-10" method="post">
+                <form action="https://formsubmit.co/el/hubazo" class="form-to-send" id="sign-up-form" class="mt-10" method="post">
                     <div class="input-group">
                         <input type="text" class="p-2" placeholder="First Name" name="first_name">
                     </div>
