--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <div id="sign-up-for-a-spot" class="popup fixed top-0 left-0 right-0 bottom-0 bg-black/80 z-[100] flex justify-center items-center">
         
-        <span data-close-action-type="sign-up" class="close-action text text-3xl text-white absolute top-10 right-10 cursor-pointer">X</span>
+        <span data-close-action-type="sign-up-for-a-spot" class="close-action text text-3xl text-white absolute top-10 right-10 cursor-pointer">X</span>
         <div class="sm-full w-3/6 min-h-[90px] bg-white rounded-md flex gap-2 overflow-hidden">
             <div class="w-[57%] overlay hid-sm">
                 <img src="./Assets/images/login2.jpg" class="object-cover" alt="Serene Muse">
